# rp2-rs-template

./: .gitmodules  Cargo.toml  README.md  build.rs  rp2040.x
.cargo/: config.toml
src/: main.rs
