[package]
edition = "2021"
name = "metst"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
# cortex-m-rtic = "1.1.4"
embedded-hal = "1.0.0"

defmt = "0.3"
defmt-rtt = "0.4"

rp235x-hal = {optional = true, path = "./rp-hal/rp235x-hal", version = "0.2.0", features = ["rt", "critical-section-impl"]}
rp2040-hal = {optional = true, path = "./rp-hal/rp2040-hal", version="0.10", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = {optional = true, version="0.2"}

# rp-pico = "0.9"

# critical-section = {version = "1.0.0"}
# dht-sensor = "0.2.1"
# embedded-alloc = "0.5.1"
# embedded-hal-async = "1.0.0"
# embedded-io = "0.6.1"
# embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}
# fugit = "0.3.6"
# futures = {version = "0.3.30", default-features = false, features = ["async-await"]}
# hd44780-driver = "0.4.0"
# heapless = "0.8.0"
# nb = "1.0"
# panic-probe = { version = "0.3", features = ["print-defmt"] }
# pio = "0.2.0"
# pio-proc = "0.2.0"
# usb-device = "0.3.2"
# usbd-serial = "0.2.2"
# static_cell = "2.1.0"

[target.'cfg( target_arch = "arm" )'.dependencies]
panic-probe = {version = "0.3", features = ["print-defmt"] }
# embassy-executor = {version = "0.5", features = ["arch-cortex-m", "executor-thread"]}

[target.'cfg( target_arch = "riscv32" )'.dependencies]
panic-halt = {version = "0.2.0"}
# embassy-executor = {version = "0.5", features = ["arch-riscv32", "executor-thread"]}

[features]
rp2040 = ["rp2040-hal", "rp2040-boot2"]
rp2350 = ["rp235x-hal"]
